[package]
name = "oomfi"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/chloe0x0/oomfi"
authors = ["chloe"]
keywords = ["Hash", "BloomFilter", "bloomfilter", "bloom", "filter"]
description = "A minimal Bloom Filter implementation in Rust"
license = "MIT"
license_path = "/license"

[lib]
name = "oomfi"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"